# N-body-simulation

./: CMakeLists.txt  README.md
src/: barnesHut.cpp  barnesHut.h  body.cpp  body.h  constants.h  directSum.cpp  directSum.h  main.cpp  nBody.cpp  nBody.h  vector.cpp  vector.h
src/cpu/: CMakeLists.txt  README.md  algorithm.cpp  algorithm.h  barnesHut.cpp  barnesHut.h  body.cpp  body.h  constants.h  directSum.cpp  directSum.h  main.cpp  nBody.cpp  nBody.h  quadtree.cpp  quadtree.h  vector.cpp  vector.h
src/gpu/: CMakeLists.txt  constants.h  directSum.h  directSum_kernel.cu
src/gpu/BH/: CMakeLists.txt  README.md  barnesHutCuda.cu  barnesHutCuda.cuh  barnesHut_kernel.cu  barnesHut_kernel.cuh  constants.h  err.h  main.cpp  main.cu
src/gpu/DS/: CMakeLists.txt  README.md  constants.h  directSum_kernel.cu  err.h
